# blockweaver

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/blockweaver/: __init__.py  _bigquery.py  _build.py  _contract.py  _corpus.py  _rpc.py  cli.py
tests/: conftest.py  test_cli.py
